addind ressponsive header

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,4 @@
-@import "/Users/click/Documents/GitHub/namava.clone-/node_modules/bootstrap/scss/bootstrap.scss";
 @import "/Users/click/Documents/GitHub/namava.clone-/sass/custom.scss";
+@import "/Users/click/Documents/GitHub/namava.clone-/node_modules/bootstrap/scss/bootstrap.scss";
 @import "/Users/click/Documents/GitHub/namava.clone-/sass/personal.scss";
+@import "/Users/click/Documents/GitHub/namava.clone-/sass/mediaqueris.scss";
