--- a/sass/personal.scss
+++ b/sass/personal.scss
@@ -14,14 +14,17 @@
 }
 body{
     font-family: iranyekan;
+    height: 4000px;
 }
 #headerTop{
-    box-shadow: 0 3px 7px rgba(0, 0, 0, .3);
+    //:;
 }
 .navbar{
+    //box-shadow:inset 0px 30px 50px -20px rgb(0, 0, 0);
+    z-index: 9;
     height: 120px !important;
     #navbarSupportedContent {
-        justify-content: center;
+        justify-content: center ;
         margin: 0px;
         font-weight: normal;
         font-size: 20px;
@@ -32,7 +35,6 @@ body{
     }
 }
 .dropdown{
-
     button{
         font-size: 20px;
     }
