--- a/css/main.css
+++ b/css/main.css
@@ -11836,8 +11836,9 @@ body {
 }
 
 .navbar {
+  box-shadow: inset 0px 30px 10px -20px rgb(0, 0, 0);
   z-index: 9;
-  height: 120px !important;
+  height: 100px !important;
 }
 .navbar #navbarSupportedContent {
   justify-content: center;
@@ -11860,6 +11861,77 @@ body {
   font-family: iranyekan;
 }
 
+.carousel {
+  position: relative;
+  display: flex;
+}
+.carousel .carousel-inner .carousel-item {
+  position: relative;
+}
+.carousel .carousel-inner .carousel-item .myShadow {
+  position: absolute;
+  z-index: 2;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  box-shadow: inset 0px 0px 600px 60px rgb(0, 0, 0);
+}
+.carousel .carousel-inner .carousel-item .details {
+  position: absolute;
+  z-index: 3;
+  display: flex;
+  flex-direction: column;
+  right: 0px;
+  top: 50%;
+  right: 5%;
+  translate: 0 -50%;
+  width: 30%;
+}
+.carousel .carousel-inner .carousel-item .details .logoName img {
+  width: 100%;
+}
+.carousel .carousel-inner .carousel-item .details .name {
+  color: white;
+  margin-left: auto;
+}
+.carousel .carousel-inner .carousel-item .details .actions {
+  margin-left: auto;
+}
+.carousel .carousel-inner .carousel-item .ekran {
+  position: absolute;
+  z-index: 3;
+  top: 60%;
+  width: 20%;
+  left: 5%;
+}
+.carousel .carousel-inner .carousel-item .ekran img {
+  width: 100%;
+}
+.carousel .carousel-control-prev,
+.carousel .carousel-control-next {
+  position: absolute;
+  z-index: 3;
+  height: 60px;
+  width: 60px;
+  padding: 10px;
+  border-radius: 50%;
+  top: auto;
+  left: 40px;
+  bottom: 15%;
+  background-color: #37383e;
+}
+.carousel .carousel-control-next {
+  left: 110px;
+}
+.carousel .carousel-indicators {
+  display: none;
+}
+.carousel .carousel-indicators button {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+}
+
 @media (max-width: 1413px) {
   .navbar-nav {
     display: none;
@@ -11874,6 +11946,12 @@ body {
   }
   .navbar button {
     display: block !important;
+  }
+  .carousel-indicators {
+    display: flex !important;
+  }
+  .btns {
+    display: none;
   }
 }
 
