--- a/css/main.css
+++ b/css/main.css
@@ -11838,20 +11838,20 @@ body {
 .navbar {
   box-shadow: inset 0px 30px 10px -20px rgb(0, 0, 0);
   z-index: 9;
-  height: 100px !important;
+  height: 80px !important;
 }
 .navbar #navbarSupportedContent {
   justify-content: center;
   margin: 0px;
   font-weight: normal;
-  font-size: 20px;
+  font-size: 15px;
 }
 .navbar #navbarSupportedContent :hover {
   color: #6eb8ff;
 }
 
 .dropdown button {
-  font-size: 20px;
+  font-size: 15px;
 }
 .dropdown .dropdown-menu {
   background-color: #37383e;
@@ -11874,18 +11874,18 @@ body {
   top: 0px;
   width: 100%;
   height: 100%;
-  box-shadow: inset 0px 0px 600px 60px rgb(0, 0, 0);
+  box-shadow: inset 0px 0px 80px 80px rgb(0, 0, 0);
 }
 .carousel .carousel-inner .carousel-item .details {
   position: absolute;
   z-index: 3;
   display: flex;
   flex-direction: column;
-  right: 0px;
   top: 50%;
   right: 5%;
   translate: 0 -50%;
   width: 30%;
+  height: auto;
 }
 .carousel .carousel-inner .carousel-item .details .logoName img {
   width: 100%;
@@ -11917,7 +11917,7 @@ body {
   border-radius: 50%;
   top: auto;
   left: 40px;
-  bottom: 15%;
+  bottom: 16%;
   background-color: #37383e;
 }
 .carousel .carousel-control-next {
@@ -11932,12 +11932,70 @@ body {
   border-radius: 50%;
 }
 
+.bottomCarousel {
+  bottom: -15%;
+}
+.bottomCarousel:hover .slick-prev {
+  background: linear-gradient(to right, rgb(0, 0, 0), rgba(18, 18, 18, 0));
+}
+.bottomCarousel:hover .slick-prev span {
+  color: white;
+}
+.bottomCarousel:hover .slick-next {
+  background: linear-gradient(to left, rgb(0, 0, 0), rgba(18, 18, 18, 0));
+}
+.bottomCarousel:hover .slick-next span {
+  color: white;
+}
+.bottomCarousel .slick-prev {
+  transition: all 1s;
+  left: 0px;
+  z-index: 4;
+  padding: 0px;
+  height: 100%;
+  width: 70px;
+  border: none;
+  background-color: transparent;
+  transition: all 1s;
+}
+.bottomCarousel .slick-prev span {
+  color: transparent;
+  font-size: 50px;
+}
+.bottomCarousel .slick-next {
+  transition: all 1s;
+  right: 0px;
+  z-index: 4;
+  padding: 0px;
+  height: 100%;
+  width: 70px;
+  border: none;
+  background-color: transparent;
+}
+.bottomCarousel .slick-next span {
+  color: transparent;
+  font-size: 50px;
+}
+.bottomCarousel .slickCarousel .slick-slide {
+  margin: 10px;
+}
+.bottomCarousel .slickCarousel .slickCarouselProduct {
+  border-radius: 20px;
+  overflow: hidden;
+}
+.bottomCarousel .slickCarousel .slickCarouselProduct :nth-child(2) {
+  display: none;
+}
+
 @media (max-width: 1413px) {
   .navbar-nav {
     display: none;
   }
   .dropdown {
     display: block !important;
+  }
+  .bottomCarousel {
+    bottom: -20%;
   }
 }
 @media (max-width: 992px) {
@@ -11952,6 +12010,49 @@ body {
   }
   .btns {
     display: none;
+  }
+  .bottomCarousel {
+    position: relative !important;
+  }
+  .bottomCarousel .slickCarousel .slickCarouselProduct :first-child {
+    display: none;
+  }
+  .bottomCarousel .slickCarousel .slickCarouselProduct :nth-child(2) {
+    display: block;
+  }
+}
+@media (max-width: 700px) {
+  .carousel .carousel-inner .carousel-item .main-img {
+    display: none !important;
+  }
+  .carousel .carousel-inner .carousel-item .mobile-img {
+    display: block !important;
+  }
+  .carousel .carousel-inner .carousel-item .details {
+    width: 50%;
+    right: 25%;
+    bottom: 50%;
+  }
+  .carousel .carousel-inner .carousel-item .details .name {
+    justify-content: center;
+    margin: 0px;
+  }
+  .carousel .carousel-inner .carousel-item .details .name p {
+    text-align: center;
+  }
+  .carousel .carousel-inner .carousel-item .details .actions {
+    margin: 0px auto;
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (max-width: 420px) {
+  #navbarSupportedContent {
+    font-size: 5px !important;
+  }
+  #logo {
+    height: 30px;
+    width: 60px;
   }
 }
 
