--- a/sass/personal.scss
+++ b/sass/personal.scss
@@ -16,18 +16,15 @@ body{
     font-family: iranyekan;
     height: 4000px;
 }
-#headerTop{
-    //:;
-}
 .navbar{
     box-shadow:inset 0px 30px 10px -20px rgb(0, 0, 0);
     z-index: 9;
-    height: 100px !important;
+    height: 80px !important;
     #navbarSupportedContent {
         justify-content: center ;
         margin: 0px;
         font-weight: normal;
-        font-size: 20px;
+        font-size: 15px;
     
         :hover{
             color: #6eb8ff;
@@ -36,7 +33,7 @@ body{
 }
 .dropdown{
     button{
-        font-size: 20px;
+        font-size: 15px;
     }
     .dropdown-menu{
         background-color: #37383e;
@@ -58,18 +55,18 @@ body{
                 top: 0px;
                 width: 100%;
                 height: 100%;
-                box-shadow:inset 0px 0px 600px 60px rgb(0, 0, 0);
+                box-shadow:inset 0px 0px 80px 80px rgb(0, 0, 0);
             }
             .details{
                 position: absolute;
                 z-index: 3;
                 display: flex;
                 flex-direction: column;
-                right: 0px;
                 top: 50%;
                 right: 5%;
                 translate: 0 -50%;
                 width: 30%;
+                height: auto;
                 .logoName{
                     img{
                         width:100%;
@@ -106,7 +103,7 @@ body{
         border-radius: 50%;
         top: auto;
         left: 40px;
-        bottom: 15%;
+        bottom: 16%;
         background-color: #37383e;
     }
     .carousel-control-next{
@@ -121,4 +118,65 @@ body{
         display: none;
     }
 }
+.bottomCarousel{
+    bottom: -15%;
+    &:hover{
+        .slick-prev{
+            background: linear-gradient(to right, rgb(0, 0, 0), rgba(18,18,18,0));
+            span{
+                color: white;
+            }
+        }
+        .slick-next{
+            background: linear-gradient(to left, rgb(0, 0, 0), rgba(18,18,18,0));
+            span{
+                color: white;
+            }
+        }
+    }
+    .slick-prev{
+        transition: all 1s;
+        left: 0px;
+        z-index: 4; 
+        padding: 0px;
+        height:100%;
+        width: 70px;
+        border: none;
+        background-color: transparent;
+        transition: all 1s;
+        span{
+            color: transparent;
+            font-size: 50px;
+        }
+    }
+    .slick-next{
+        transition: all 1s;
+        right: 0px;
+        z-index: 4;
+        padding: 0px;
+        height: 100%;
+        width: 70px;
+        border: none;
+        background-color: transparent;
+        span{
+            color: transparent;
+            font-size: 50px;
+        }
+    }
+    
+    .slickCarousel{
+        .slick-slide{
+            margin: 10px ;
+        }
+        .slickCarouselProduct{
+            border-radius: 20px;
+            overflow: hidden;
+            :nth-child(2){
+                display: none;
+            }
+        }
+    }
+}
+
+
 
