--- a/sass/personal.scss
+++ b/sass/personal.scss
@@ -55,7 +55,7 @@ body{
                 top: 0px;
                 width: 100%;
                 height: 100%;
-                box-shadow:inset 0px 0px 80px 80px rgb(0, 0, 0);
+                background-image: linear-gradient(rgba(18, 18, 18, 0) 10vw, rgb(18, 18, 18) 46.875vw), linear-gradient(to left, rgba(18, 18, 18, 0.7), rgba(18, 18, 18, 0) 50%);
             }
             .details{
                 position: absolute;
@@ -121,49 +121,20 @@ body{
 .bottomCarousel{
     bottom: -15%;
     &:hover{
-        .slick-prev{
+        .prev{
             background: linear-gradient(to right, rgb(0, 0, 0), rgba(18,18,18,0));
             span{
                 color: white;
             }
         }
-        .slick-next{
+        .next{
             background: linear-gradient(to left, rgb(0, 0, 0), rgba(18,18,18,0));
             span{
                 color: white;
             }
         }
     }
-    .slick-prev{
-        transition: all 1s;
-        left: 0px;
-        z-index: 4; 
-        padding: 0px;
-        height:100%;
-        width: 70px;
-        border: none;
-        background-color: transparent;
-        transition: all 1s;
-        span{
-            color: transparent;
-            font-size: 50px;
-        }
-    }
-    .slick-next{
-        transition: all 1s;
-        right: 0px;
-        z-index: 4;
-        padding: 0px;
-        height: 100%;
-        width: 70px;
-        border: none;
-        background-color: transparent;
-        span{
-            color: transparent;
-            font-size: 50px;
-        }
-    }
-    
+
     .slickCarousel{
         .slick-slide{
             margin: 10px ;
@@ -175,6 +146,56 @@ body{
                 display: none;
             }
         }
+    }
+}
+#live{
+    &:hover{
+        .prev{
+            background: linear-gradient(to right, rgb(0, 0, 0), rgba(18,18,18,0));
+            span{
+                color: white;
+            }
+        }
+        .next{
+            background: linear-gradient(to left, rgb(0, 0, 0), rgba(18,18,18,0));
+            span{
+                color: white;
+            }
+        }
+    }
+    .slick-list{
+        .slick-slide{
+            margin: 10px ;
+        }
+    }
+}
+.prev{
+    transition: all 1s;
+    left: 0px;
+    z-index: 4; 
+    padding: 0px;
+    height:100%;
+    width: 70px;
+    border: none;
+    background-color: transparent;
+    transition: all 1s;
+    span{
+        color: transparent;
+        font-size: 50px;
+    }
+}
+.next{
+    transition: all 1s;
+    right: 0px;
+    z-index: 4;
+    padding: 0px;
+    height: 100%;
+    width: 70px;
+    border: none;
+    background-color: transparent;
+    span{
+        color: transparent;
+        font-size: 50px;
     }
 }
 
