fixing main carousel background-image

--- a/css/main.css
+++ b/css/main.css
@@ -12040,6 +12040,10 @@ body {
   }
 }
 @media (max-width: 700px) {
+  .carousel .carousel-inner .carousel-item .myShadow {
+    box-shadow: rgb(18, 18, 18) 0px -5px 5px inset;
+    background-image: linear-gradient(rgba(18, 18, 18, 0) 10vw, rgb(18, 18, 18) 135vw);
+  }
   .carousel .carousel-inner .carousel-item .main-img {
     display: none !important;
   }
