adding responsive footer and ready for search function

--- a/css/main.css
+++ b/css/main.css
@@ -11836,7 +11836,7 @@ body {
 }
 
 .navbar {
-  box-shadow: inset 0px 30px 10px -20px rgb(0, 0, 0);
+  box-shadow: inset 0px 50px 40px -20px rgb(0, 0, 0);
   z-index: 9;
   height: 80px !important;
 }
@@ -11947,9 +11947,6 @@ body {
 .bottomCarousel:hover .next span {
   color: white;
 }
-.bottomCarousel .slickCarousel .slick-slide {
-  margin: 10px;
-}
 .bottomCarousel .slickCarousel .slickCarouselProduct {
   border-radius: 20px;
   overflow: hidden;
@@ -11970,8 +11967,29 @@ body {
 #live:hover .next span {
   color: white;
 }
-#live .slick-list .slick-slide {
-  margin: 10px;
+
+.movies:hover .prev {
+  background: linear-gradient(to right, rgb(0, 0, 0), rgba(18, 18, 18, 0));
+}
+.movies:hover .prev span {
+  color: white;
+}
+.movies:hover .next {
+  background: linear-gradient(to left, rgb(0, 0, 0), rgba(18, 18, 18, 0));
+}
+.movies:hover .next span {
+  color: white;
+}
+.movies .slickCarouselMovies .slickCarouselProduct .card .card-img-overlay:hover {
+  transition: all 1s;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.9));
+}
+.movies .slickCarouselMovies .slickCarouselProduct .card .card-img-overlay:hover p {
+  display: block !important;
+}
+
+.slick-list .slick-slide {
+  margin: 10px !important;
 }
 
 .prev {
@@ -12003,6 +12021,34 @@ body {
 .next span {
   color: transparent;
   font-size: 50px;
+}
+
+#footer {
+  background-color: #1A1A1A;
+}
+#footer #download {
+  border-radius: 5px;
+  background-color: #222327;
+}
+#footer #download .app {
+  display: flex;
+}
+#footer #download .app #footerLogo {
+  display: flex;
+  background: linear-gradient(to bottom, rgb(25, 147, 255), rgb(0, 95, 180)) !important;
+  text-align: center;
+  border-radius: 8px;
+  padding: 18px 8px;
+}
+#footer #download .links a {
+  display: flex;
+  text-align: right;
+  margin-left: 16px;
+  border-radius: 6px;
+  background-color: #37383e;
+}
+#footer #info .namad {
+  height: 200px;
 }
 
 @media (max-width: 1413px) {
@@ -12037,6 +12083,14 @@ body {
   }
   .bottomCarousel .slickCarousel .slickCarouselProduct :nth-child(2) {
     display: block;
+  }
+  #footer {
+    display: none;
+  }
+}
+@media (min-width: 992px) {
+  #movies {
+    margin-top: 15% !important;
   }
 }
 @media (max-width: 700px) {
