--- a/sass/personal.scss
+++ b/sass/personal.scss
@@ -17,7 +17,7 @@ body{
     height: 4000px;
 }
 .navbar{
-    box-shadow:inset 0px 30px 10px -20px rgb(0, 0, 0);
+    box-shadow:inset 0px 50px 40px -20px rgb(0, 0, 0);
     z-index: 9;
     height: 80px !important;
     #navbarSupportedContent {
@@ -136,9 +136,6 @@ body{
     }
 
     .slickCarousel{
-        .slick-slide{
-            margin: 10px ;
-        }
         .slickCarouselProduct{
             border-radius: 20px;
             overflow: hidden;
@@ -163,10 +160,41 @@ body{
             }
         }
     }
-    .slick-list{
-        .slick-slide{
-            margin: 10px ;
+}
+.movies{
+    &:hover{
+        .prev{
+            background: linear-gradient(to right, rgb(0, 0, 0), rgba(18,18,18,0));
+            span{
+                color: white;
+            }
         }
+        .next{
+            background: linear-gradient(to left, rgb(0, 0, 0), rgba(18,18,18,0));
+            span{
+                color: white;
+            }
+        }
+    }
+    .slickCarouselMovies{
+        .slickCarouselProduct{
+            .card{
+                .card-img-overlay{
+                    &:hover{
+                        transition: all 1s;
+                        background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.9));
+                        p{
+                            display: block !important;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+.slick-list{
+    .slick-slide{
+        margin: 10px !important;
     }
 }
 .prev{
@@ -198,6 +226,39 @@ body{
         font-size: 50px;
     }
 }
+#footer{
+    background-color: #1A1A1A;
+    #download{
+        border-radius: 5px;
+        background-color: #222327;
+        .app{
+            display: flex;
+            #footerLogo{
+                display: flex;
+                background: linear-gradient(to bottom, rgba(25,147,255,1), rgba(0,95,180,1)) !important;
+                text-align: center;
+                border-radius: 8px;
+                padding: 18px 8px;
+            }
+        }
+        .links{
+            a{
+                display: flex;
+                text-align: right;
+                margin-left: 16px;
+                border-radius: 6px;
+                background-color: #37383e;
+            }
+        }
+    }
+    #info{
+        .namad{
+            height: 200px;
+        }
+    }
+}
+
+
 
 
 
