--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
   --bs-primary: #121212;
-  --bs-secondary: #6c757d;
+  --bs-secondary: #37383e;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
@@ -42,7 +42,7 @@
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-primary-rgb: 18, 18, 18;
-  --bs-secondary-rgb: 108, 117, 125;
+  --bs-secondary-rgb: 55, 56, 62;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -50,7 +50,7 @@
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
   --bs-primary-text-emphasis: #070707;
-  --bs-secondary-text-emphasis: #2b2f32;
+  --bs-secondary-text-emphasis: #161619;
   --bs-success-text-emphasis: #0a3622;
   --bs-info-text-emphasis: #055160;
   --bs-warning-text-emphasis: #664d03;
@@ -58,7 +58,7 @@
   --bs-light-text-emphasis: #495057;
   --bs-dark-text-emphasis: #495057;
   --bs-primary-bg-subtle: #d0d0d0;
-  --bs-secondary-bg-subtle: #e2e3e5;
+  --bs-secondary-bg-subtle: #d7d7d8;
   --bs-success-bg-subtle: #d1e7dd;
   --bs-info-bg-subtle: #cff4fc;
   --bs-warning-bg-subtle: #fff3cd;
@@ -66,7 +66,7 @@
   --bs-light-bg-subtle: #fcfcfd;
   --bs-dark-bg-subtle: #ced4da;
   --bs-primary-border-subtle: #a0a0a0;
-  --bs-secondary-border-subtle: #c4c8cb;
+  --bs-secondary-border-subtle: #afafb2;
   --bs-success-border-subtle: #a3cfbb;
   --bs-info-border-subtle: #9eeaf9;
   --bs-warning-border-subtle: #ffe69c;
@@ -146,7 +146,7 @@
   --bs-tertiary-bg: #2b3035;
   --bs-tertiary-bg-rgb: 43, 48, 53;
   --bs-primary-text-emphasis: #717171;
-  --bs-secondary-text-emphasis: #a7acb1;
+  --bs-secondary-text-emphasis: #87888b;
   --bs-success-text-emphasis: #75b798;
   --bs-info-text-emphasis: #6edff6;
   --bs-warning-text-emphasis: #ffda6a;
@@ -154,7 +154,7 @@
   --bs-light-text-emphasis: #f8f9fa;
   --bs-dark-text-emphasis: #dee2e6;
   --bs-primary-bg-subtle: #040404;
-  --bs-secondary-bg-subtle: #161719;
+  --bs-secondary-bg-subtle: #0b0b0c;
   --bs-success-bg-subtle: #051b11;
   --bs-info-bg-subtle: #032830;
   --bs-warning-bg-subtle: #332701;
@@ -162,7 +162,7 @@
   --bs-light-bg-subtle: #343a40;
   --bs-dark-bg-subtle: #1a1d20;
   --bs-primary-border-subtle: #0b0b0b;
-  --bs-secondary-border-subtle: #41464b;
+  --bs-secondary-border-subtle: #212225;
   --bs-success-border-subtle: #0f5132;
   --bs-info-border-subtle: #087990;
   --bs-warning-border-subtle: #997404;
@@ -1948,13 +1948,13 @@ progress {
 
 .table-secondary {
   --bs-table-color: #000;
-  --bs-table-bg: #e2e3e5;
-  --bs-table-border-color: #b5b6b7;
-  --bs-table-striped-bg: #d7d8da;
+  --bs-table-bg: #d7d7d8;
+  --bs-table-border-color: #acacad;
+  --bs-table-striped-bg: #cccccd;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #cbccce;
+  --bs-table-active-bg: #c2c2c2;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #d1d2d4;
+  --bs-table-hover-bg: #c7c7c8;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -2989,19 +2989,19 @@ textarea.form-control-lg {
 
 .btn-secondary {
   --bs-btn-color: #fff;
-  --bs-btn-bg: #6c757d;
-  --bs-btn-border-color: #6c757d;
+  --bs-btn-bg: #37383e;
+  --bs-btn-border-color: #37383e;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #5c636a;
-  --bs-btn-hover-border-color: #565e64;
-  --bs-btn-focus-shadow-rgb: 130, 138, 145;
+  --bs-btn-hover-bg: #2f3035;
+  --bs-btn-hover-border-color: #2c2d32;
+  --bs-btn-focus-shadow-rgb: 85, 86, 91;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #565e64;
-  --bs-btn-active-border-color: #51585e;
+  --bs-btn-active-bg: #2c2d32;
+  --bs-btn-active-border-color: #292a2f;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #6c757d;
-  --bs-btn-disabled-border-color: #6c757d;
+  --bs-btn-disabled-bg: #37383e;
+  --bs-btn-disabled-border-color: #37383e;
 }
 
 .btn-success {
@@ -3124,19 +3124,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-secondary {
-  --bs-btn-color: #6c757d;
-  --bs-btn-border-color: #6c757d;
+  --bs-btn-color: #37383e;
+  --bs-btn-border-color: #37383e;
   --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #6c757d;
-  --bs-btn-hover-border-color: #6c757d;
-  --bs-btn-focus-shadow-rgb: 108, 117, 125;
+  --bs-btn-hover-bg: #37383e;
+  --bs-btn-hover-border-color: #37383e;
+  --bs-btn-focus-shadow-rgb: 55, 56, 62;
   --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #6c757d;
-  --bs-btn-active-border-color: #6c757d;
+  --bs-btn-active-bg: #37383e;
+  --bs-btn-active-border-color: #37383e;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #6c757d;
+  --bs-btn-disabled-color: #37383e;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #6c757d;
+  --bs-btn-disabled-border-color: #37383e;
   --bs-gradient: none;
 }
 
@@ -6804,8 +6804,8 @@ textarea.form-control-lg {
   text-decoration-color: RGBA(var(--bs-secondary-rgb), var(--bs-link-underline-opacity, 1)) !important;
 }
 .link-secondary:hover, .link-secondary:focus {
-  color: RGBA(86, 94, 100, var(--bs-link-opacity, 1)) !important;
-  text-decoration-color: RGBA(86, 94, 100, var(--bs-link-underline-opacity, 1)) !important;
+  color: RGBA(44, 45, 50, var(--bs-link-opacity, 1)) !important;
+  text-decoration-color: RGBA(44, 45, 50, var(--bs-link-underline-opacity, 1)) !important;
 }
 
 .link-success {
@@ -12049,6 +12049,44 @@ body {
 }
 #footer #info .namad {
   height: 200px;
+}
+
+.search {
+  margin-top: 90px;
+}
+.search .searchInput {
+  width: auto;
+  background-color: #37383e;
+  height: 90px;
+  margin-right: 440px;
+}
+.search .searchInput input {
+  background-color: #37383e;
+}
+.search .searchInput input::placeholder {
+  color: #6c757d;
+  font-size: 25px;
+}
+.search .searchInput input:active {
+  border: none;
+}
+.search .searchInput span {
+  font-size: 35px;
+}
+.search .list-group {
+  width: 360px;
+  background-color: #37383e;
+}
+.search .list-group li {
+  background-color: #37383e;
+}
+
+.categorySearch {
+  border: none;
+  background-color: #cccccc;
+}
+.categorySearch::placeholder {
+  color: black;
 }
 
 @media (max-width: 1413px) {
